--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -19,6 +19,7 @@ v0.43.11-RC5
 + Added Rasalhague Dominion to playable factions list
 + PR #737: Allow the user to enter non-canon names into the location textbox when editing a mission/contract
 + Data: Updating Mechfiles, RATs, and Images in MekHQ repo to match Megamek ones.
++ PR #738: Fix for issue #731 [43.10 AtB] contracts become uncompleted
 
 v0.43.10-RC4
 + PR #670: Adjusted unit rating calculation and infantry counts
