--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.43.12-RC6
 + Issue #733: Clan techs still have clan penalties to maintenance
++ Issue #745: NPE at AbstractUnitGenerator.generateTurrets
 
 v0.43.11-RC5 (2018-06-04 0100 UTC)
 + PR #707: Added MissingOmniPod class needed for acquisition.
