--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -3,6 +3,8 @@ VERSION HISTORY:
 v0.43.12-RC6
 + Issue #733: Clan techs still have clan penalties to maintenance
 + Issue #745: NPE at AbstractUnitGenerator.generateTurrets
++ PR #752: AtB contracts will once again nag the user about insufficient force deployment, and subtract contract score.
+		Also, retirement "payouts" of 0 no longer persist endlessly.
 
 v0.43.11-RC5 (2018-06-04 0100 UTC)
 + PR #707: Added MissingOmniPod class needed for acquisition.
