--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -5,6 +5,7 @@ v0.43.12-RC6
 + Issue #745: NPE at AbstractUnitGenerator.generateTurrets
 + PR #752: AtB contracts will once again nag the user about insufficient force deployment, and subtract contract score.
 		Also, retirement "payouts" of 0 no longer persist endlessly.
++ Issue #748: GM -> Restore Unit on units with missing components no longer hangs MekHQ in an endless loop.
 
 v0.43.11-RC5 (2018-06-04 0100 UTC)
 + PR #707: Added MissingOmniPod class needed for acquisition.
