--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -6,6 +6,8 @@ v0.43.12-RC6
 + PR #752: AtB contracts will once again nag the user about insufficient force deployment, and subtract contract score.
 		Also, retirement "payouts" of 0 no longer persist endlessly.
 + Issue #748: GM -> Restore Unit on units with missing components no longer hangs MekHQ in an endless loop.
++ Issue #694: Added missing Draconis Combine ranks.
++ Issue #724: Changed references to megamek.info to point to megamek.org
 
 v0.43.11-RC5 (2018-06-04 0100 UTC)
 + PR #707: Added MissingOmniPod class needed for acquisition.
