--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,6 +1,6 @@
 VERSION HISTORY:
 ----------------
-v0.43.12-RC6
+v0.44.0 (2018-06-24 1900 UTC)
 + Issue #733: Clan techs still have clan penalties to maintenance
 + Issue #745: NPE at AbstractUnitGenerator.generateTurrets
 + PR #752: AtB contracts will once again nag the user about insufficient force deployment, and subtract contract score.
@@ -9,6 +9,8 @@ v0.43.12-RC6
 + Issue #694: Added missing Draconis Combine ranks.
 + Issue #724: Changed references to megamek.info to point to megamek.org
 + PR #761: Fix for salvaging dropship ammo
++ Updated MegaMek.jar to v0.44.0
++ Updated MegaMekLab.jar to v0.44.0
 
 v0.43.11-RC5 (2018-06-04 0100 UTC)
 + PR #707: Added MissingOmniPod class needed for acquisition.
