--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.45.0-git
 + PR #602: Add KIA checkbox and functionality to prisoners during scenario resolution.
 + Issue #308: Can now change contract payment multiplier when manually creating a new contract.
++ PR #741: Updated configuration presets for new campaigns to include new special pilot abilities.
 
 v0.44.0 (2018-06-24 1900 UTC)
 + Issue #733: Clan techs still have clan penalties to maintenance
