--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -8,6 +8,8 @@ v0.45.0-git
 + PR #742: Errata - Range Master SPA no longer applicable to LOS range
 + Issue #384: Cannot negotiate contract terms because the game selects the highest skilled admin
         and not the one with the negotiating skill
++ PR #766: Added balance-over-time and revenue/expenditure charts to finances tab
++ PR #769: Added tooltips to tonnage labels on force view when AtB is enabled.
 
 v0.44.0 (2018-06-24 1900 UTC)
 + Issue #733: Clan techs still have clan penalties to maintenance
