--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -15,6 +15,7 @@ v0.45.0-git
 + PR #762: Help -> About popup now contains link to MegaMek github home page.
 + PR #777: Addresses issue #776, by allowing the user to order up to a 1000 of some part or personnel class at a time, up from 100 previously.
 + PR #787: Adds total value for parts and fixes issue with net worth calculation for parts
++ Show java version and system info in log file.
 
 v0.44.0 (2018-06-24 1900 UTC)
 + Issue #733: Clan techs still have clan penalties to maintenance
