--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -24,6 +24,7 @@ v0.45.0-git
 + PR #804: Two fixes to GM mode finances -> edit transaction
 + PR #801: [Feature] Personnel awards
 + PR #799: [Feature] Optional "Pay for Repairs" per Campaign Ops, page 140
++ Issue #773: Fix text color for person text in Personnel and Hangar "Graphic" views
 
 v0.44.0 (2018-06-24 1900 UTC)
 + Issue #733: Clan techs still have clan penalties to maintenance
