--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -28,6 +28,7 @@ v0.45.0-git
 + Issue #549: Allow AtB-style prisoner ransom for prisoners even if the AtB option isn't enabled
 + Issue #819: Dropshop Baydoor unrepairable
 + Issue #796: LAM Pilot shows as Support in Personnel Breakdown
++ PR #821: Fix occasional issue where mechwarrior names with apostrophes and other "funny" characters would show up weird for completed scenarios.
 
 v0.44.0 (2018-06-24 1900 UTC)
 + Issue #733: Clan techs still have clan penalties to maintenance
