--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -37,6 +37,7 @@ v0.45.0-git
 + PR #823: Feature: Damage pilots from GM mode (non-advanced medical) 
 + PR #811: [Feature]: Mass mothball/reactivate. Reactivating now does its best to restore the unit's force/crew/tech assignments.
 + Issue #830: [Feature]: GM Mode "Strip Unit". Takes all parts off the given unit(s) and place them in the warehouse.
++ Issue #775: [Feature]: Daily Log History. Retains 'daily log' entries for up to 120 days when turned on. Entry history is cleared when the user exits the program.
 
 v0.44.0 (2018-06-24 1900 UTC)
 + Issue #733: Clan techs still have clan penalties to maintenance
