--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.45.1-git
 + Issue #814: Fixed AtB morale calculation to match AtB rules
++ Fixed JAR packaging error that made personnel market methods inaccessible.
 
 v0.45.0 (2018-08-02 0200 UTC)
 + PR #602: Add KIA checkbox and functionality to prisoners during scenario resolution.
