--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -18,6 +18,8 @@ v0.45.1-git
 + PR #121: allow purchasing and adding of parts en-masse
 + Issue #855: Fixed parts in transit not displaying correctly (showing up as "OmniPod")
 + PR #807: Cosmetic and accuracy improvements to AtB contract profit estimate display (in the contract market)
++ Issue #895: Fix invariant to check if tech time available for maintenance.
++ Issue #853: Do not report on the part's unit if not present during multi-day repairs.
 
 v0.45.0 (2018-08-02 0200 UTC)
 + PR #602: Add KIA checkbox and functionality to prisoners during scenario resolution.
