--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -20,6 +20,7 @@ v0.45.1-git
 + PR #807: Cosmetic and accuracy improvements to AtB contract profit estimate display (in the contract market)
 + Issue #895: Fix invariant to check if tech time available for maintenance.
 + Issue #853: Do not report on the part's unit if not present during multi-day repairs.
++ Issue #849: Consider a person's secondary role during training XP calculations
 
 v0.45.0 (2018-08-02 0200 UTC)
 + PR #602: Add KIA checkbox and functionality to prisoners during scenario resolution.
