--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -22,6 +22,7 @@ v0.45.1-git
 + Issue #853: Do not report on the part's unit if not present during multi-day repairs.
 + Issue #849: Consider a person's secondary role during training XP calculations.
 + Issue #836: Use native file dialogs and remember the last used folder.
++ PR #909: Fix NullPointerException in ResolveScenarioTracker.
 
 v0.45.0 (2018-08-02 0200 UTC)
 + PR #602: Add KIA checkbox and functionality to prisoners during scenario resolution.
