--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -24,6 +24,10 @@ v0.45.1-git
 + Issue #836: Use native file dialogs and remember the last used folder.
 + PR #909: Fix NullPointerException in ResolveScenarioTracker.
 + PR #908: Fix NPE in getPartInUse if EquipmentType is null.
++ Update MegaMek.jar to v0.45.1
++ Update MegaMekLab.jar to v0.45.1
+
+
 
 v0.45.0 (2018-08-02 0200 UTC)
 + PR #602: Add KIA checkbox and functionality to prisoners during scenario resolution.
