history.txt update for PR #920
Fixes #919: Dropship Crewmembers/techs displayed as "Nobody" In Repair
Bay

--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -2,6 +2,8 @@ VERSION HISTORY:
 ----------------
 v0.45.2-SNAPSHOT
 + Switched build system from ant to gradle.
++ Issue #917: Hire Full Compliment Regularly Hires Bondsmen
++ Issue #919: Dropship Crewmembers/techs displayed as "Nobody" In Repair Bay
 
 v0.45.1 (2018-09-03 2300 UTC)
 + PR #864: Security - address XXE vulnerabilities in XML parsers
