--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -10,6 +10,7 @@ v0.45.2-SNAPSHOT
 + PR #927: Map Colors for Socio-Industrial Level
 + PR #926: Planet-based acquisition option
 + Issue #946: Some personnel (techs and admins) no longer able to be right clicked.
++ Issue #856: Invalid AtB required lances number no longer prevents user from editing contract
 
 v0.45.1 (2018-09-03 2300 UTC)
 + PR #864: Security - address XXE vulnerabilities in XML parsers
