Updates to planets.xml

--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -11,6 +11,7 @@ v0.45.2-SNAPSHOT
 + PR #926: Planet-based acquisition option
 + Issue #946: Some personnel (techs and admins) no longer able to be right clicked.
 + Issue #856: Invalid AtB required lances number no longer prevents user from editing contract
++ Planets: Added additional data to planets.xml
 
 v0.45.1 (2018-09-03 2300 UTC)
 + PR #864: Security - address XXE vulnerabilities in XML parsers
