history.txt update for PR #956

--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -12,6 +12,8 @@ v0.45.2-SNAPSHOT
 + Issue #946: Some personnel (techs and admins) no longer able to be right clicked.
 + Issue #856: Invalid AtB required lances number no longer prevents user from editing contract
 + Planets: Added additional data to planets.xml
++ PR #956: System-wide equipment [Aerospace system equipment not associated with weapons shows in a fuselage
+           or hull location when filtering by location in repair tab].
 
 v0.45.1 (2018-09-03 2300 UTC)
 + PR #864: Security - address XXE vulnerabilities in XML parsers
