--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -20,6 +20,7 @@ v0.45.2-SNAPSHOT
 + Planets: Reunification War data for Outworlds Alliance + start of RWR 
 + PR #959: Fix for inability to repair damaged VTOL internal structure after loading campaign
 + Issue #967: Fix bug where acquired Units could never be bought
++ PR #971: Feature allowing grouping personnel by their unit on the Personnel tab
 
 v0.45.1 (2018-09-03 2300 UTC)
 + PR #864: Security - address XXE vulnerabilities in XML parsers
