--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -23,6 +23,7 @@ v0.45.2-SNAPSHOT
 + PR #971: Feature allowing grouping personnel by their unit on the Personnel tab
 + Issue #865: Changing Award Date Does Not Update Award Tooltip
 + Issue #973: No contracts are offered at the start of an AtB campaign.
++ Issue #949: Mechwarrior KO'ed at beginning of battle
 
 v0.45.1 (2018-09-03 2300 UTC)
 + PR #864: Security - address XXE vulnerabilities in XML parsers
