--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -5,6 +5,7 @@ v0.45.3-SNAPSHOT
 + PR #995: Speed up campaign load times by optimizing spare parts importing
 + PR #994: Fix exception seen during log entry updates
 + PR #998: Fix Mac OS X issue so the DateChooser dialog isn't hidden when you create a new campaign
++ PR #996: Feature: adds origin faction to a person's details and support for RAT roller in a person's GM menu
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
