--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -9,6 +9,7 @@ v0.45.3-SNAPSHOT
 + PR #997: Add weekly Support Personnel edge refresh and usage
 + PR #1006: Speed up calculation of jump paths
 + PR #999: Adds a GM hire button to new recruit dialog
++ PR #1017: Adds the list of missing units on campaign load to the log
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
