--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -11,6 +11,9 @@ v0.45.3-SNAPSHOT
 + PR #999: Adds a GM hire button to new recruit dialog
 + PR #1017: Adds the list of missing units on campaign load to the log
 + Issue #1010: Battle Armor fails to load with StackOverflowException
++ Issue #991: Fix bug where loan collateral and total value is incorrect after save and load.
++ Issue #986: Fix bug where Retirement/Defection dialog doesn't show details for first row.
++ Issue #985: Fix bug where personnel could not be exported.
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
