--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -15,6 +15,7 @@ v0.45.3-SNAPSHOT
 + Issue #986: Fix bug where Retirement/Defection dialog doesn't show details for first row.
 + Issue #985: Fix bug where personnel could not be exported.
 + Issue #1022: Fix bug where failed acquisitions did not count against logistics person's limit
++ Issue #964: Do not raise UnitChangedEvent if there is no unit in GM Acquire Instantly
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
