--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -16,6 +16,7 @@ v0.45.3-SNAPSHOT
 + Issue #985: Fix bug where personnel could not be exported.
 + Issue #1022: Fix bug where failed acquisitions did not count against logistics person's limit
 + Issue #964: Do not raise UnitChangedEvent if there is no unit in GM Acquire Instantly
++ Issue #1009: Fix bug where default injury type wrong
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
