--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -19,6 +19,7 @@ v0.45.3-SNAPSHOT
 + Issue #1009: Fix bug where default injury type wrong
 + Issue #976: Fix bug where techs without any minutes left may get stuck on overnight tasks
 + PR #1031: Fix bug where selected repair task moves when you change mode
++ Issue #1028: Fix bug where Mass Repair Options were not applied unless you clicked Save
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
