--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -21,6 +21,8 @@ v0.45.3-SNAPSHOT
 + PR #1031: Fix bug where selected repair task moves when you change mode
 + Issue #1028: Fix bug where Mass Repair Options were not applied unless you clicked Save
 + Issue #1005: Allow fractional tons to be loaded in LargeCraftAmmoBins
++ Issue #825: Arbitrary contract score modifier now persists across save/load
++ Issue #970: Can now recruit multiple prisoners at a time
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
