--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -23,6 +23,8 @@ v0.45.3-SNAPSHOT
 + Issue #1005: Allow fractional tons to be loaded in LargeCraftAmmoBins
 + Issue #825: Arbitrary contract score modifier now persists across save/load
 + Issue #970: Can now recruit multiple prisoners at a time
++ Issue #1036: Enable zero intensity level for AtB Scenario Generation
++ Issue #779: Fix AtB deployment nag before a contract has started
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
