--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -28,6 +28,8 @@ v0.45.3-SNAPSHOT
 + PR #1036: Make startup GUI show all four buttons at lower resolutions
 + PR #1041: Fix some unit/tech mismatches at CPNX load
 + Issue #772: Fix graphical display issues with multiple-day advancement
++ PR #1045: Crewed Unit Options Handling (SPA/Edge)
++ PR #1045: Resolve errata for reloading times of capital missile ammo (now 1 hour per missile)
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
