--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -31,6 +31,7 @@ v0.45.3-SNAPSHOT
 + PR #1045: Crewed Unit Options Handling (SPA/Edge)
 + PR #1045: Resolve errata for reloading times of capital missile ammo (now 1 hour per missile)
 + Issue #1049: Warehouse tab may fail to properly render
++ PR #1053: Add a Change Camouflage context menu item to forces in the TOE
 
 v0.45.2 (2018-11-18 0200 UTC)
 + Switched build system from ant to gradle.
