--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.45.4-SNAPSHOT
 + PR #1067: Switch to Joda Money library internally for financial math
++ Issue #1057: Don't allow Rotor damage to go negative or use negative damages
 
 v0.45.3 (2019-02-12 0500 UTC)
 + Issue #990: Feature: Add bulk confirm dialog if more than one unit is removed
