--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -3,6 +3,9 @@ VERSION HISTORY:
 v0.45.4-SNAPSHOT
 + PR #1067: Switch to Joda Money library internally for financial math
 + Issue #1057: Don't allow Rotor damage to go negative or use negative damages
++ Issue #1085: Find different replacement part if original missing or has a new ID
++ Issue #1076: Address bug in Personnel Market where GM Add still costs money and add GM Hire Full Complement
++ PR #1084: Save user preferences for UI settings such as window sizes and positions, et al
 
 v0.45.3 (2019-02-12 0500 UTC)
 + Issue #990: Feature: Add bulk confirm dialog if more than one unit is removed
