--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -8,6 +8,7 @@ v0.45.4-SNAPSHOT
 + PR #1084: Save user preferences for UI settings such as window sizes and positions, et al
 + Issue #1082: Fix issue preventing creation of new AtB contract
 + Issue #1086: Fix issue introduced in 45.3 preventing "special" AtB scenarios from starting
++ Issue #112: Adds mission log and counter for personnel
 
 v0.45.3 (2019-02-12 0500 UTC)
 + Issue #990: Feature: Add bulk confirm dialog if more than one unit is removed
