--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -11,6 +11,7 @@ v0.45.4-SNAPSHOT
 + Issue #1106: Fix issue introduced in 45.3 preventing AtB scenarios containing aircraft from starting under some conditions
 + Issue #112: Adds mission log and counter for personnel
 + Issue #1115: Fix stack overflow in BattleArmorSuit::getTonnage
++ Issue #1116: [Feature] Show people's Bloodnames in "Fluff" filter on personnel tab
 
 v0.45.3 (2019-02-12 0500 UTC)
 + Issue #990: Feature: Add bulk confirm dialog if more than one unit is removed
