--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -15,6 +15,7 @@ v0.45.4-SNAPSHOT
 + Issue #1125, #1127: Fix issues with loading units containing damaged AMS and MASC systems.
 + Issue #1109: Fix issue where damaged equipment can be restored with a reload
 + Issue #713: Fix incorrect reporting of training munitions/fuel costs, minor performance improvement on monthly rollover
++ PR #1136: Don't expand/contract tab panels on right double click (Mac OS X improvement)
 
 v0.45.3 (2019-02-12 0500 UTC)
 + Issue #990: Feature: Add bulk confirm dialog if more than one unit is removed
