--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -21,6 +21,7 @@ v0.45.4-SNAPSHOT
 + Issue #1144: fix bug where bondsmen could not be recruited
 + Issue #1148: fix bug where loan could not be paid off
 + Issue #1150: fix bug introduced in 45.3 preventing AtB scenarios reinforced by immobile player units from starting
++ Issue #1138: fix NPE in isOmniPodded check for AmmoBin's after refit
 
 v0.45.3 (2019-02-12 0500 UTC)
 + Issue #990: Feature: Add bulk confirm dialog if more than one unit is removed
