--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.45.5-SNAPSHOT
 + PR #1163: Fix vast overvaluing of opfor BV in the briefing ta
 + Issue #1161: don't cast non-Infantry to Infantry during peacetime cost calculations
++ Issue #70: BA has a 100% salvage chance
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
