--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -9,6 +9,7 @@ v0.45.5-SNAPSHOT
 + Issue #1164, #1174: Fix various issues involving money, in add/edit transaction, add/edit loot.
 + Issue #1182: Fixes a NPE because some money amounts are not always initialized in all contracts.
 + Issue #1171: Adds autosave feature (daily or weekly, and/or before missions).
++ Issue #1128: Player can now view stats for enemy personnel when resolving a scenario.
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
