--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -21,6 +21,7 @@ v0.45.5-SNAPSHOT
 	- allied dropships may now be non-Leopards
 	- VTOLs are always on as the bot can handle them fairly well
 + PR #1210: Adds all remaining unimplemented Large Craft parts - CIC, Grav Decks, K-F Drive, K-F Boom and the like
++ PR #1216: Track part ID moves during campaign loads that may affect refits (may fix some outstanding refit bugs)
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
