--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -13,6 +13,7 @@ v0.46.0-rc1
 + Issue #1185: Player can acquire ammo bins via parts acquisition dialog.
 + Issue #1205: Improve purchase parts dialog performance when sorting.
 + PR #1217: Fix error preventing scenario resolution involving KIA personnel
++ PR #1216: Track part ID moves during campaign loads that may affect refits (may fix some outstanding refit bugs)
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
