--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -11,6 +11,8 @@ v0.46.0-rc1
 + Issue #1128: Player can now view stats for enemy personnel when resolving a scenario.
 + Issue #1197: Fix bug where personnel could not be assigned to Battle Armor after repair.
 + Issue #1185: Player can acquire ammo bins via parts acquisition dialog.
++ Issue #1205: Improve purchase parts dialog performance when sorting.
++ PR #1217: Fix error preventing scenario resolution involving KIA personnel
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
