--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -24,6 +24,7 @@ v0.45.5-SNAPSHOT
 + PR #1216: Track part ID moves during campaign loads that may affect refits (may fix some outstanding refit bugs)
 + Issue #1110: Badger / Bandit vehicles can't be customized prior to 3047
 + PR #1227: Dropships can now load alternate munitions into artillery base if the game is configured for it
++ PR #1226: [Feature] Campaign Subset Export: export a subset of your current campaign into another, either new or existing, campaign file. Overwrites units and personnel with the same guid. Option to remove exported personnel from source campaign. Obviously make backups before using on an existing campaign.
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
