--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,5 +1,8 @@
 VERSION HISTORY:
 ----------------
+0.46.0 (2019-08-12 1900 UTC)
++ Issue 1249: Tech Names Missing in Event Log
+
 0.46.0-rc.2 (2019-08-12 0100 UTC)
 + Issue #1075: Fix 'Mech location repair and salvage times to match StratOps
 + Issue #1224: Scenario templates no longer fail to generate forces when the 'use vehicles' AtB setting is turned off
